<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="910dp"
    android:gravity="top|center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/layout_search"
            android:layout_width="330dp"
            android:layout_height="35dp"
            android:background="@drawable/search_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:src="@mipmap/search_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/search_txt"
                android:textColor="@color/gray999"
                android:textSize="@dimen/sp_12" />
        </LinearLayout>
    </LinearLayout>

    <com.youth.banner.Banner
        android:id="@+id/banner"
        android:layout_width="330dp"
        android:layout_height="130dp"
        app:delay_time="4000"
        app:indicator_drawable_selected="@mipmap/indicator_select"
        app:indicator_drawable_unselected="@mipmap/indicator_normal"
        app:indicator_height="12dp"
        app:indicator_width="12dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/head_type_list"
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="10dp"
        android:nestedScrollingEnabled="false"></android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/layout_ad"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/iv_home_ad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="330dp"
        android:layout_height="33dp"
        android:layout_marginTop="6dp">

        <ImageView
            android:id="@+id/iv_rec"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/recommend_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:layout_toRightOf="@+id/iv_rec"
            android:text="@string/rec_txt"
            android:textColor="@color/rec_color"
            android:textFontWeight="800"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_toLeftOf="@+id/iv_into_com"
            android:text="@string/into_community_txt"
            android:textColor="@color/into_community_color"
            android:textSize="13sp" />

        <ImageView
            android:id="@+id/iv_into_com"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="2dp"
            android:src="@mipmap/into_community_icon" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/iv_user_head"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/head_def" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:layout_toRightOf="@+id/iv_user_head"
                android:gravity="left|center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_user_nick_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/into_community_color"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_topic_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/community_type_color"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/tv_article_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:textColor="@color/gray_aaa"
                        android:textSize="9sp" />
                </LinearLayout>
            </LinearLayout>

            <FrameLayout
                android:id="@+id/layout_follow"
                android:layout_width="70dp"
                android:layout_height="34dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/follow_user_icon">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/follow_user_txt"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </FrameLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:minHeight="40dp">

            <TextView
                android:id="@+id/tv_article_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/community_head_list"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:nestedScrollingEnabled="false"></android.support.v7.widget.RecyclerView>
    </LinearLayout>

    <View
        android:id="@+id/main_line_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"></View>

    <LinearLayout
        android:id="@+id/layout_top_refresh2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/float_layout"
            android:layout_width="330dp"
            android:layout_height="48dp">

            <ImageView
                android:id="@+id/iv_new"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/iv_new" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="6dp"
                android:layout_toRightOf="@+id/iv_new"
                android:text="@string/new_head_txt"
                android:textColor="@color/rec_color"
                android:textFontWeight="800"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_toLeftOf="@+id/iv_refresh"
                android:text="@string/refresh_head_txt"
                android:textColor="@color/into_community_color"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/iv_refresh"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="2dp"
                android:src="@mipmap/refresh_head" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
