<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:gravity="top|center"
    android:orientation="vertical"
    tools:context=".ui.activity.SearchActivity">

    <LinearLayout
        android:id="@+id/layout_top"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/search_bg"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="left|center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_marginLeft="10dp"
                android:src="@mipmap/search_icon" />

            <EditText
                android:id="@+id/et_key_word"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/search_txt"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:textColor="@color/gray999"
                android:textSize="@dimen/sp_12" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:gravity="center|right"
            android:text="@string/cancel_txt"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_hot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="330dp"
                android:layout_height="250dp"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="大家都在搜"
                    android:textColor="@color/black"
                    android:textFontWeight="600"
                    android:textSize="20sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/hot_search_word_list"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="8dp"></android.support.v7.widget.RecyclerView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:text="搜索记录"
                        android:textColor="@color/black"
                        android:textFontWeight="600"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:id="@+id/layout_clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="清空"
                            android:layout_marginRight="1dp"
                            android:textColor="@color/gray999"
                            android:textSize="14sp" />

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:src="@mipmap/his_clear" />
                    </LinearLayout>
                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/hot_search_history_list"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="8dp"></android.support.v7.widget.RecyclerView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/search_result_list"
                android:layout_width="330dp"
                android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_search_no_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:src="@mipmap/empty_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/no_result_txt"
                android:textColor="@color/tab_normal_color"
                android:textSize="16sp" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>